--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -94,7 +94,7 @@
 					<section class="toc">
 						<ol aria-label="Menu">
 							<li><a href="#overview">Overview</a></li>
-							<li><a href="#creator">Creator Images</a></li>
+							<li><a href="#creators">Creators</a></li>
 							<li><a href="#manuscripts">Manuscripts</a></li>
 							<li><a href="#objects">Objects</a></li>
 							<li><a href="#citation">Page Citation</a></li>
@@ -105,7 +105,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
 
-						<p>This section presents a selection of visual materials relevant to <em>One More Voice</em> and so complements the items found on the pages for <a href="/html/materials/texts.html">recovered texts</a>, <a href="/html/materials/books.html">book-length works</a>, and <a href="/html/materials/motion_pictures.html">motions pictures</a>. The section includes <a href="#creator">images</a> (photographs and illustrations) of the creators featured on the site, a small number of relevant <a href="#manuscripts">manuscripts</a>, and an assortment of <a href="#objects">objects</a> (paintings, photographs, other objects), including works by contemporaneous artists from around the globe. Creator images are arranged alphabetically by subject, while manuscripts and creatives works are organized by creator. For each item, the page provides a thumbnail image that links to the full documentary record for the given item and to a larger-resolution, uncropped version of the item image.</p>
+						<p>This section presents a selection of visual materials relevant to <em>One More Voice</em> and so complements the items found on the pages for <a href="/html/materials/texts.html">recovered texts</a>, <a href="/html/materials/books.html">book-length works</a>, and <a href="/html/materials/motion_pictures.html">motions pictures</a>. The section includes <a href="#creators">images</a> (photographs and illustrations) of the creators featured on the site, a small number of relevant <a href="#manuscripts">manuscripts</a>, and an assortment of <a href="#objects">objects</a> (paintings, photographs, other objects), including works by contemporaneous artists from around the globe. Creator images are arranged alphabetically by subject, while manuscripts and creatives works are organized by creator. For each item, the page provides a thumbnail image that links to the full documentary record for the given item and to a larger-resolution, uncropped version of the item image.</p>
 					</section>
 				</article>
 				<div class="decoration"></div>
@@ -114,8 +114,8 @@
 			<section class="content recovered">
 				<div class="decoration"></div>
 				<article id="visuals">
-					<section aria-labelledby="creator">
-						<h3 id="creator">Creator Images</h3>
+					<section aria-labelledby="creators">
+						<h3 id="creators">Creators</h3>
 						<p class="info-note center">Click on thumbnails for item details and uncropped images</p>
 
 						<section class="visuals gallery">
@@ -495,6 +495,15 @@
 									</div>
 								</a>
 								<figcaption>Sarojini Naidu (early twentieth century)</figcaption>
+							</figure>
+
+							<figure class="gallery-item" id="liv_021128">
+								<a href="/html/transcriptions/liv_021128_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021128_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021128_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021128_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021128_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021128_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021128_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021128_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Head and shoulders portrait of Yone Noguchi in half profile, facing left." />
+									</div>
+								</a>
+								<figcaption>Yone Noguchi (1915)</figcaption>
 							</figure>
 							
 							<figure id="liv_021018">
