--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -764,6 +764,8 @@
 
 													<li>David Livingstone, and Unknown Arab and African Informants. <a href="/html/transcriptions/liv_000023_ART.html">Excerpt from David Livingstone’s Notebook with Swahili Vocabulary List and Arabic Numbers</a>. [Between March 1866 and March 1870].</li>
 
+													<li>Yoshio Markino. <a href="/html/transcriptions/liv_021128_ART.html">Yone Noguchi</a>. 1915.</li>
+
 													<li>Maull & Co. <a href="/html/transcriptions/liv_021123_ART.html">James Chuma</a>. [1874?].</li>
 
 													<li>Maull & Co. <a href="/html/transcriptions/liv_021089_ART.html">James Chuma and Abdullah Susi</a>. [1874?].</li>
