--- a/html/materials/books.html
+++ b/html/materials/books.html
@@ -139,7 +139,8 @@
 												<li><a href="#dey">Lál Behári Dey</a></li>
 												<li><a href="#mmdutt">Michael Madhusudan Dutt</a></li>
 												<li><a href="#dutt">Toru Dutt</a></li>
-												<li><a href="#hossain">Rokeya Sakhawat Hossain</a></li>	
+												<li><a href="#hossain">Rokeya Sakhawat Hossain</a></li>
+												<li><a href="#kasiprasada">Ghosa Kasiprasāda</a></li>
 												<li><a href="#malabari">Behrámji Malábari</a></li>
 												<li><a href="#mukerji">Dhan Gopal Mukerji</a></li>
 												<li><a href="#mukharji">T.N. Mukharji</a></li>
@@ -788,6 +789,25 @@
 									<summary>Works</summary>
 									<ol class="works-list">
 										<li><em>Sultana’s Dream and Selections from the Secluded One</em>. Co-authored by Roushan Jahan. New York: The Feminist Press at CUNY, 2013. <em>“Sultana’s Dream” originally published 1905.</em> <a aria-label="External Link" href="https://github.com/amardeepmsingh/Colonial-South-Asian-Literature/blob/master/Rokeya-Sakhawat-Hossain-Sultanas-Dream-1905-fiction.txt">Text only version</a>.</li>
+									</ol>
+								</details>
+
+								<p class="location-info">South Asia</p>
+							</section>
+
+							<section class="section-container"  aria-labelledby="kasiprasada">
+								<h4 id="kasiprasada">Ghosa Kasiprasāda</h4>
+								
+								<ul>
+									<li>1809-1874</li>
+									<li><a aria-label="External Link" href="https://en.wikipedia.org/wiki/Kashiprasad_Ghosh">Wikipedia</a></li>
+								</ul>				
+
+								<details>
+									<summary>Works</summary>
+									<ol class="works-list">
+										<li><em>The Sháïr; and Other Poems</em>. Calcutta: Scott, 1830.</li>
+										<li><em>Also see:</em> Gibson, Mary Ellis, ed. <em>Anglophone Poetry in Colonial India, 1780-1913: A Critical Anthology</em>. Athens, OH: Ohio University Press, 2011.</li>
 									</ol>
 								</details>
 
