--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -128,6 +128,33 @@
 								<figcaption>Edward Wilmot Blyden (between 1851 and 1860)</figcaption>
 							</figure>
 
+							<figure class="gallery-item" id="liv_021129">
+								<a href="/html/transcriptions/liv_021129_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021129_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021129_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021129_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021129_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021129_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021129_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021129_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Head and shoulders portrait of Edward Wilmot Blyden." />
+									</div>
+								</a>
+								<figcaption>Edward Wilmot Blyden (mid-nineteenth century)</figcaption>
+							</figure>
+
+							<figure class="gallery-item" id="liv_021131">
+								<a href="/html/transcriptions/liv_021131_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021131_0001_thumbnail-398px.jpg" srcset="/img/visual-materials/thumbnails/liv_021131_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021131_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021131_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021131_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021131_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Edward Wilmot Blyden, seated at desk, writing in book, turned to his right, but facing forward." />
+									</div>
+								</a>
+								<figcaption>Edward Wilmot Blyden (mid- to late-nineteenth century)</figcaption>
+							</figure>
+
+							<figure class="gallery-item" id="liv_021130">
+								<a href="/html/transcriptions/liv_021130_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021130_0001_thumbnail-286px.jpg" srcset="/img/visual-materials/thumbnails/liv_021130_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021130_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021130_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Edward Wilmot Blyden, seated, holding book, turned to his right, but facing forward." />
+									</div>
+								</a>
+								<figcaption>Edward Wilmot Blyden (mid- to late-nineteenth century)</figcaption>
+							</figure>
+
 							<figure id="liv_021058">
 								<a href="/html/transcriptions/liv_021058_ART.html">
 									<div class="image-container">
