--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -664,6 +664,12 @@
 													
 													<li>Anonymous. “<a href="/html/transcriptions/liv_021023_ART.html">Tshekedi [Khama] with the Small Chief for Whom He Acts as Regent [Seretse Khama] & Tshekedi’s Mother [Semane Khama].</a>]” [Early twentieth century].</li>
 
+													<li>Anonymous. <a href="/html/transcriptions/liv_021129_ART.html">Wilmot Edward Blyden</a>. [Mid-ninteenth century].</li>
+
+													<li>Anonymous. <a href="/html/transcriptions/liv_021130_ART.html">Wilmot Edward Blyden</a>. [Mid- to late-ninteenth century].</li>
+
+													<li>Anonymous. <a href="/html/transcriptions/liv_021131_ART.html">Wilmot Edward Blyden</a>. [Mid- to late-ninteenth century].</li>
+
 													<li>Anonymous. <a href="/html/transcriptions/liv_021080_ART.html">Yoshio Markino (with Facsimile Signature) </a>. 1912.</li>
 
 													<li>Anonymous, and Anonymous. <a href="/html/transcriptions/liv_021039_ART.html">Onoto Watanna; Illustration of Numè, Koto, and Matsu</a>. [Late nineteenth century]; 1899 </li>
