--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -12,11 +12,12 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0025" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/ivens-craft.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" onload="this.rel='stylesheet'" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" onload="this.rel='stylesheet'" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0025"/>
-			<!-- <link rel="stylesheet" type="text/css" href="/css/ivens-craft.css?=newVers_0001"> -->
+			<link rel="stylesheet" type="text/css" href="/css/ivens-craft.css?=newVers_0001">
 			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 			<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		</noscript>
@@ -25,7 +26,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
 		<style>.image-wrapper::after{padding-bottom:calc((504/698)*100%)}</style>
-		<link rel="stylesheet" type="text/css" href="/css/ivens-craft.css?=newVers_0001">
 	</head>
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
