--- a/html/ivens-craft/ic-template.html
+++ b/html/ivens-craft/ic-template.html
@@ -12,10 +12,12 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0025" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/ivens-craft.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" onload="this.rel='stylesheet'" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" onload="this.rel='stylesheet'" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0025"/>
+			<link rel="stylesheet" type="text/css" href="/css/ivens-craft.css?=newVers_0001">
 			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 			<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		</noscript>
@@ -28,7 +30,7 @@
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 
-	<body class="essay materials" id="body"><!-- Change -->
+	<body class="essay materials ivens-craft" id="body"><!-- Change -->
 
 		<header id="header">
 			<!-- #skip adapted from https://webaim.org/techniques/skipnav/ -->
@@ -39,7 +41,7 @@
 				<ul>
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft</a></li>
+					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
 					<li id="level-4"></li><!-- Change -->
 				</ul>
 			</nav>
@@ -78,6 +80,7 @@
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
 						</ul>
+						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
 						<figcaption class="caption-icon desktop">
 							<span class="tooltip-container">
 								<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-2" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -128,6 +131,25 @@
 		</main>
 
 		<div data-include="footer"></div>
+
+		<div id="arrow-container" class="arrow-container">
+			<span class="tooltip-container">
+			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
+					<path d="M15 18l-6-6 6-6"></path>
+				</svg>
+				<span id="previous-arrow" role="tooltip" class="hidden">Previous page</span>
+			</a>
+			</span>
+			<span class="tooltip-container">
+			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
+					<path d="M9 18l6-6-6-6"></path>
+				</svg>
+				<span id="next-arrow" role="tooltip" class="hidden">Next page</span>
+			</a>
+			</span>
+		</div>
 
 		<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		
