--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -3,23 +3,23 @@
 
 No. 34.
 
-The R<sc>IGHT</sc> H<sc>ON</sc>. <ac>SIR HERCULES ROBINSON</ac>, G.C.M.G., to the R<sc>IGHT</sc> H<sc>ON</sc>.
+The R<span class="small">IGHT</span> H<span class="small">ON</span>. <ac>SIR HERCULES ROBINSON</ac>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
 <ac>THE EARL OF DERBY</ac>, K.G. (Received July 15, 1885.)
 
 My <ac>LORD</ac>, Government House, Capetown, June 24, 1885.
-I <sc>HAVE</sc> the honour to enclose, for your information, a copy of a despatch which
+I <span class="small">HAVE</span> the honour to enclose, for your information, a copy of a despatch which
 I have received from Sir Charles Warren, covering reports of interviews with the
 Chiefs Ghasitsive, Sechele, and Khama.
 
 I have, &c.,
-(Signed) <ac>HERCULES ROBINSON</sc>,
+(Signed) <ac>HERCULES ROBINSON</span>,
 The Right Hon. the Earl of Derby, K.G., High Commissioner.
 &c. &c. &c.
 
 Enclosure in No. 34.
-S<sc>IR</sc> C. W<sc>ARREN</sc> to H<sc>IGH</sc> C<sc>OMMISSIONER</sc>.
-S<sc>IR</sc>, Mafeking, June 4, 1885.
-I <sc>HAVE</sc> the honour to forward herewith, for the information of the Secretary of
+S<span class="small">IR</span> C. W<span class="small">ARREN</span> to H<span class="small">IGH</span> C<span class="small">OMMISSIONER</span>.
+S<span class="small">IR</span>, Mafeking, June 4, 1885.
+I <span class="small">HAVE</span> the honour to forward herewith, for the information of the Secretary of
 State, the following documents with reference to my visit to the Chiefs Ghasitsive,
 Sechele, and Khame, and their proposals as to the future of their territories.
 A. Account of interview between Sir Charles Warren and the Chief Ghasitsive,
@@ -37,14 +37,14 @@ G. Proposals of the Chief Khame, May 13, 1885; with map accompanying.
 H. Proposals of the Chief Sechele, May 25, 1885.
 I.Proposals of the Chief Ghasitsive, May 29, 1885.
 I have, &c.,
-(Signed) C<sc>HARLES</sc> W<sc>ARREN</sc>,
+(Signed) C<span class="small">HARLES</span> W<span class="small">ARREN</span>,
 His Excellency Special Commissioner.
 the Right Hon. Sir H. Robinson, G.C.M.G.,
 &c. &c. &c.
 
 A.
-R<sc>ESULT OF</sc> I<sc>NTERVIEW</sc> between Sir C<sc>HARLES</sc> W<sc>ARREN</sc>, Her Britannic Majesty's Special
-Commissioner, and the Chief G<sc>HASITSIVE</sc>, April 24, 1885.
+R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
+Commissioner, and the Chief G<span class="small">HASITSIVE</span>, April 24, 1885.
 
 There were present Ghasitsive, his son Bathoen, and several councillors.
 After some conversation Sir Charles Warren said that, before going on to Sechele's,
@@ -416,7 +416,7 @@ tent ? Am I not within the bounds of the Protectorate? I know it is established 
 as to the numerous questions springing out of it, I wish to leave them all till we see how
 you carry on your protection in the South.
 C.
-P<sc>ROPOSALS</sc> of the Chief S<sc>ECHELE</sc>.
+P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.
 Molepolole, 28th April 1885.
 At a meeting of Bakwena with Sir Charles Warren, messenger of the Queen of
 England, he made known to us the pleasure of the Queen to establish a Protec-
@@ -426,18 +426,18 @@ we wish to see how the Queen's Protectorate will help the other Chiefs which are
 in it, namely, Mankoroane, Montsioa, and Ghasitsive. Should we find that they are
 well protected by the Queen, we also shall then be agreeable and without a word of
 dispute.
-(Signed) S<sc>ECHELE</sc>.
-Witnesses K<sc>GARI</sc>.
-(Signed) F<sc>RED</sc>. W. W<sc>ALKER</sc>, K<sc>GOSIDINTSI</sc>.
-( ,, ) G<sc>EO</sc>. G<sc>RAY</sc>. S<sc>EBELE</sc>.
+(Signed) S<span class="small">ECHELE</span>.
+Witnesses K<span class="small">GARI</span>.
+(Signed) F<span class="small">RED</span>. W. W<span class="small">ALKER</span>, K<span class="small">GOSIDINTSI</span>.
+( ,, ) G<span class="small">EO</span>. G<span class="small">RAY</span>. S<span class="small">EBELE</span>.
 I certify that the foregoing was written by Kgari, son of Sechele. The signatures
 were also written by him by direction of Sechele, Sebele, and Kgosidentse.
 Done before me on this 28th day of April 1885.
-(Signed) S. H. E<sc>DWARDS</sc>,
+(Signed) S. H. E<span class="small">DWARDS</span>,
 Major.
 
 D.
-Chief S<sc>ECHELE</sc> to S<sc>IR</sc> C. W<sc>ARREN</sc>.
+Chief S<span class="small">ECHELE</span> to S<span class="small">IR</span> C. W<span class="small">ARREN</span>.
 Sir, Molepolole, 28th April 1885.
 The Chief Sechele has requested us to write and inform you that he has received
 news from Bamangwato, viz., that the Matabele tribe are on the road to make war with
@@ -447,12 +447,12 @@ they intend coming through my country. He says his traders have but little ammun
 on hand, and trusts you will not leave him without presenting him with means to defend
 his country.
 We have, &c.,
-(Signed) B<sc>OYNE</sc>, G<sc>RAY</sc>, and W<sc>ALKER</sc> (for
-S<sc>ECHELE</sc>.)
+(Signed) B<span class="small">OYNE</span>, G<span class="small">RAY</span>, and W<span class="small">ALKER</span> (for
+S<span class="small">ECHELE</span>.)
 
 E.
 
-MEETING between S<sc>IR</sc> C. W<sc>ARREN</sc> and K<sc>HAMA</sc>, Chief of the Bamangwato, with his
+MEETING between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and K<span class="small">HAMA</span>, Chief of the Bamangwato, with his
 Councillors, at Shoshong, 12th May 1885.
 
 <em>Sir C. Warren</em>.ーI have brought with me to-day a message from the Queen of
@@ -595,8 +595,8 @@ forward step by step, always taking care to keep on firm ground, and thus we sha
 further ther progress and prosperity of the country.
 
 F.
-M<sc>EETING</sc> at Shoshong on 13th May 1885, between S<sc>IR</sc> C. W<sc>ARREN</sc> and the Chief
-K<sc>HAME</sc>, of the Bamangwato tribe.
+M<span class="small">EETING</span> at Shoshong on 13th May 1885, between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief
+K<span class="small">HAME</span>, of the Bamangwato tribe.
 
 <em>Khame</em>.-ーYou spoke about putting our proposals and thoughts in writing. We have
 done so. And here are our writings (handing the paper and translation and the map).
@@ -630,7 +630,7 @@ country?
 <em>Sir C. Warren</em>.ーTurn them out.
 
 G.
-Proposals of the Chief K<sc>HAME</sc>, with map* accompanying.
+Proposals of the Chief K<span class="small">HAME</span>, with map* accompanying.
 Shoshong, May 13, 1885.
 I, Khama, Chief of the Bamangwato, with my younger brothers, and heads of my town,
 express my gratitude at the coming of the messengers of the Queen of England, and
@@ -714,41 +714,41 @@ build his house and cultivate bis lands, and show himself to be a true settler a
 and not a travelling trader. Those who shall be received in the country, to become
 settlers in it, ought to be approved by the officer of the Queen appointed to this work ;
 and I add, let us work together, let me also approve of those who are received.
-(Signed) K<sc>HAME</sc>. (Signed) K<sc>UATI</sc>
+(Signed) K<span class="small">HAME</span>. (Signed) K<span class="small">UATI</span>
 
-( ,, ) S<sc>EVETSE</sc>. this
-( ,, )U<sc>PHOENG</sc>. M<em>ATOLSOTE</sc> X
-( ,, ) I<sc>KITIRENG</sc>. mark.
-( ,,) R<sc>ADITLADI</sc>.
-His M<sc>OLOINGANE</sc>
+( ,, ) S<span class="small">EVETSE</span>. this
+( ,, )U<span class="small">PHOENG</span>. M<em>ATOLSOTE</span> X
+( ,, ) I<span class="small">KITIRENG</span>. mark.
+( ,,) R<span class="small">ADITLADI</span>.
+His M<span class="small">OLOINGANE</span>
 his
-X M<sc>OKUTSHUANE</sc> mark. X
+X M<span class="small">OKUTSHUANE</span> mark. X
 his
 mark.
-S<sc>ABESHO</sc> X
-(Signed) S<sc>EPHEKOLO</sc>. mark.
+S<span class="small">ABESHO</span> X
+(Signed) S<span class="small">EPHEKOLO</span>. mark.
 his
-L<sc>EGKOWE</sc> X T<sc>AU</sc> K<sc>OBUNG</sc> X
-R<sc>ABURITENG</sc> X M<sc>OCHOLOPHEKO</sc>X
+L<span class="small">EGKOWE</span> X T<span class="small">AU</span> K<span class="small">OBUNG</span> X
+R<span class="small">ABURITENG</span> X M<span class="small">OCHOLOPHEKO</span>X
 mark.
 mark.
 his
 his
-M<sc>ATHEBI</sc> X S<sc>UPHOBI</sc> X
+M<span class="small">ATHEBI</span> X S<span class="small">UPHOBI</span> X
 mark.
 mark.
-(Signed) T<sc>IRO</sc> his D<sc>ILORWE</sc> X
-K<sc>GOTHOOCHO</sc> X mark. mark.his
-M<sc>OTSHEQUWE</sc> X
-(Signed) R<sc>AMPODIE</sc>
+(Signed) T<span class="small">IRO</span> his D<span class="small">ILORWE</span> X
+K<span class="small">GOTHOOCHO</span> X mark. mark.his
+M<span class="small">OTSHEQUWE</span> X
+(Signed) R<span class="small">AMPODIE</span>
 his
-T<sc>ORONGANE</sc> X R<em>ANI</sc> X
+T<span class="small">ORONGANE</span> X R<em>ANI</span> X
 mark.
 his
-K<sc>AMODISA</sc> X M<sc>OKGETHI</sc> X
+K<span class="small">AMODISA</span> X M<span class="small">OKGETHI</span> X
 mark. mark.
 his his
-M<sc>OLIA</sc> X R<sc>AMOGABELEO</sc> X
+M<span class="small">OLIA</span> X R<span class="small">AMOGABELEO</span> X
 mark. mark.
 
 
@@ -756,33 +756,33 @@ mark. mark.
 47
 631
 his his
-M<em>OKOWANI</sc> X T<sc>HOGANE</sc> X
+M<em>OKOWANI</span> X T<span class="small">HOGANE</span> X
 mark. mark.
 his his
-P<em>HITTWE</sc> X M<sc>OOKODI</sc> X
+P<em>HITTWE</span> X M<span class="small">OOKODI</span> X
 mark. mark.
 his his
-N<sc>OANVOADICKMEWE</em> X L<sc>ETHAKU</sc> X
+N<span class="small">OANVOADICKMEWE</em> X L<span class="small">ETHAKU</span> X
 mark.
 mark.
-His (Signed) N<sc>KOBELE</sc>.
-M<sc>OPI</em> X ( ,, ) M<sc>OROA</sc>.
-Mark. ( ,. ) G<sc>UBUSATU</sc>.
-M<em>OTHELWA</sc> X M<sc>OTHIBO</sc> mark. X
-(Signed) K<em>GOSIEGAU</sc>. mark.his
-His M<sc>OGKWATHI</sc> X
-M<sc>OTHOESI</sc> X mark.
-mark. (Signed) M<sc>UALIFIIE.
+His (Signed) N<span class="small">KOBELE</span>.
+M<span class="small">OPI</em> X ( ,, ) M<span class="small">OROA</span>.
+Mark. ( ,. ) G<span class="small">UBUSATU</span>.
+M<em>OTHELWA</span> X M<span class="small">OTHIBO</span> mark. X
+(Signed) K<em>GOSIEGAU</span>. mark.his
+His M<span class="small">OGKWATHI</span> X
+M<span class="small">OTHOESI</span> X mark.
+mark. (Signed) M<span class="small">UALIFIIE.
 Signed in Kgotha.
 Witnesssed by :ー
-(Signed) E<sc>DWIN</sc> L<sc>LOYD</sc>.
-( ,, ) G<sc>EORGE</sc> B<sc>ADEN</sc>-P<sc>OWELL.
-( ,, )F<sc>RANK</sc> W<sc>HITELY</sc>.
+(Signed) E<span class="small">DWIN</span> L<span class="small">LOYD</span>.
+( ,, ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL.
+( ,, )F<span class="small">RANK</span> W<span class="small">HITELY</span>.
 Translated from the Sechuana by--
-(Signed) J<sc>OHN</sc> M<sc>ACKENZIE</sc>.
+(Signed) J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 
 H.
-P<sc>ROPOSALS</sc> of the Chief S<sc>ECHELE</sc>, 25th May 1885.
+P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>, 25th May 1885.
 Molopolole, 25th May 1885.
 I, Sechele, son of Mochwasebi, Chief of the Bakwena, having with me my sons and
 my younger brothers, have heard the message concerning the protection of the Queen of
@@ -800,25 +800,25 @@ Further I wish to establish that the country concerning which I am speaking is n
 saleable according to Bakwena. I say let this go on to be the law of the country.
 And as to the country which I give to the Queen, I mean that we shall hunt in it
 while there is still game in it.
-(Signed) S<sc>ECHELE</sc>.
-( ,, ) S<sc>EBELE</sc>.
-( ,, ) K<sc>GARI</sc>.
+(Signed) S<span class="small">ECHELE</span>.
+( ,, ) S<span class="small">EBELE</span>.
+( ,, ) K<span class="small">GARI</span>.
 his
-K<sc>GOSILINTSI</sc> X
+K<span class="small">GOSILINTSI</span> X
 mark.
-(Signed) M<sc>OTSIOKHIMO</sc>.
-Witnesses :ー ,, ) M<sc>HIKO</sc>.
-(Signed) F<sc>REDK</sc>. W. W<sc>ALKER</sc>.
-G<sc>EORGE</sc> B<sc>ADEN</sc>-P<sc>OWELL</sc>.
+(Signed) M<span class="small">OTSIOKHIMO</span>.
+Witnesses :ー ,, ) M<span class="small">HIKO</span>.
+(Signed) F<span class="small">REDK</span>. W. W<span class="small">ALKER</span>.
+G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 Translated from the Sechuana byー 
-J<sc>OHN</sc> M<sc>ACKENZIE</sc>.
+J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 F4
 
 
 ****page 13****
 48
 I.
-P<sc>ROPOSALS</sc> of the Chief G<sc>HASITSIVE</sc>, 29th May 1885.
+P<span class="small">ROPOSALS</span> of the Chief G<span class="small">HASITSIVE</span>, 29th May 1885.
 Kanye, 29th May 1885.
 I, Ghasitsive, Chief of the Bangwaketsi, with my son and younger brothers, have
 heard the message of the Protectorate of the Queen of England, and we give thanks for
@@ -848,36 +848,36 @@ to-day for the English, I wish to have a voice in approving of them. As to the c
 which I have apportioned to the Queen in the West, I desire that my people may hunt
 in it while the game is still there.
 his
-G<sc>HASITSIVE</sc> X
+G<span class="small">HASITSIVE</span> X
 mark.
-(Signed) B<sc>ATHOEN</sc>
+(Signed) B<span class="small">ATHOEN</span>
 his
-L<sc>EGOTSAMA</sc> X
+L<span class="small">EGOTSAMA</span> X
 mark
 his
 KUMUNAO
 X
 mark.
 his
-B<sc>OME</sc> X
+B<span class="small">OME</span> X
 mark.
 his
-T<sc>ELEKELEO<sc> X
+T<span class="small">ELEKELEO<span class="small"> X
 mark.
 his
-M<sc>ASEU</sc> X
+M<span class="small">ASEU</span> X
 mark.
 his
-M<sc>OLIETSA</sc> X
+M<span class="small">OLIETSA</span> X
 mark.
 his
-K<sc>GAMA</sc> X
+K<span class="small">GAMA</span> X
 mark.
 his
-M<sc>OISAKAMO</sc> X
+M<span class="small">OISAKAMO</span> X
 mark.
 Witnesses :ー 
-(Signed) B. C. F<sc>HERE</sc>.
-( " ) G<sc>EORGE</sc> B<sc>ADEN</sc>-P<sc>OWELL</sc>.
+(Signed) B. C. F<span class="small">HERE</span>.
+( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 
 
