bots text caps & page

--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -1,18 +1,18 @@
-****page 1****
+<!-- page 1 -->
 36
 
 No. 34.
 
-The R<span class="small">IGHT</span> H<span class="small">ON</span>. <ac>SIR HERCULES ROBINSON</ac>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
-<ac>THE EARL OF DERBY</ac>, K.G. (Received July 15, 1885.)
+The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
+<span class="caps">THE EARL OF DERBY</span>, K.G. (Received July 15, 1885.)
 
-My <ac>LORD</ac>, Government House, Capetown, June 24, 1885.
+My <span class="caps">LORD</span>, Government House, Capetown, June 24, 1885.
 I <span class="small">HAVE</span> the honour to enclose, for your information, a copy of a despatch which
 I have received from Sir Charles Warren, covering reports of interviews with the
 Chiefs Ghasitsive, Sechele, and Khama.
 
 I have, &c.,
-(Signed) <ac>HERCULES ROBINSON</span>,
+(Signed) <span class="caps">HERCULES ROBINSON</span>,
 The Right Hon. the Earl of Derby, K.G., High Commissioner.
 &c. &c. &c.
 
@@ -64,7 +64,7 @@ drink was sent away or destroyed.
 man did not drink it. If the white man were to bring up kegs of castor oil, would
 
 
-****page 2****
+<!-- page 2 -->
 37
 62,
 they sell it as they did liquor ? No ! because the black man does not want it every day
@@ -133,7 +133,7 @@ Montsioa's ?
 E 3
 
 
-****page 3****
+<!-- page 3 -->
 38
 <em>Sebeli</em>.一A stem-buck cannot protect itself, but God protects it and lets it live.
 <em>Sir C. Warren</em>.一Was it the same with you when you came here as refugees fleeing
@@ -202,7 +202,7 @@ feel assured I am an Englishman.
 
 
 
-****page 4****
+<!-- page 4 -->
 39
 623
 <em>Sir C. Warren</em>.ー(To Sechele.) During the latter disturbance in Montsion' country,
@@ -272,7 +272,7 @@ protection, but if there is to be a paying of taxes, then it is another thing.
 E 4
 
 
-****page 5****
+<!-- page 5 -->
 40
 <em>Headman No. 1</em>.ーI think Kosi Lontswe has spoken well. (Here Sechele interrupts
 him.)
@@ -340,7 +340,7 @@ When Mankoroane, Montsioa, Ghasitsive are resuscitated, then we shall see the re
 a Protectorate, and there will not be one dissentient voice against it in the whole tribe.
 
 
-****page 6****
+<!-- page 6 -->
 41
 625
 I have some dealings with the Boers, buying and selling mealies, dogs, and cattle; but I
@@ -410,7 +410,7 @@ camp to play off against me directly you go away. In any case, are we not in the
 A 17830. F
 
 
-****page 7****
+<!-- page 7 -->
 42
 tent ? Am I not within the bounds of the Protectorate? I know it is established but
 as to the numerous questions springing out of it, I wish to leave them all till we see how
@@ -472,7 +472,7 @@ liquor had been introduced into these territories, and many of the rich people h
 acquired a longing for strong drink, and would sell all or anything they had to obtain
 
 
-****page 8****
+<!-- page 8 -->
 43
 624
 it. First their oxen, then their karosses would go, and they would trump up their
@@ -542,7 +542,7 @@ will sell the country. We should be glad if the Queen gave our Chief a large tra
 F2
 
 
-****page 9****
+<!-- page 9 -->
 44
 country. Our Chief was born to have a large tract of country. In the early days our
 Chief's first desire was to keep liquor out of the country. We know if the drink comes
@@ -610,7 +610,7 @@ Her Majesty the papers he has made. I am very glad to hear of the improvements t
 
 
 
-****page 10****
+<!-- page 10 -->
 45
 629
 
@@ -678,7 +678,7 @@ thought how this can be done ; I mean plans which can be thought out at the begi
 F3
 
 
-****page 11****
+<!-- page 11 -->
 46
 so that the Queen's people may all be pleasedーthe black people and the white people. I
 propose that a certain country of known dimensions should be mine and my people's for our
@@ -752,7 +752,7 @@ M<span class="small">OLIA</span> X R<span class="small">AMOGABELEO</span> X
 mark. mark.
 
 
-****page 12****
+<!-- page 12 -->
 47
 631
 his his
@@ -815,7 +815,7 @@ J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 F4
 
 
-****page 13****
+<!-- page 13 -->
 48
 I.
 P<span class="small">ROPOSALS</span> of the Chief G<span class="small">HASITSIVE</span>, 29th May 1885.
