--- a/html/recovering-histories/kenya/liv_022001_HTML.html
+++ b/html/recovering-histories/kenya/liv_022001_HTML.html
@@ -34,7 +34,7 @@
 <ul>
 <li id="level-1"><a href="/">Home</a></li>
 <li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories</a></li> -->
+<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties</a></li> -->
 <li id="level-4">[Treaty/Agreement of 10 and 15 August 1904]</li>
 </ul>
 </nav>
