--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>[Treaty/Agreement of 10 and 15 August 1904] | One More Voice</title>
+<title>“Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama” | One More Voice</title>
 <meta name="description" content="."><!-- Change -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
@@ -34,8 +34,8 @@
 <ul>
 <li id="level-1"><a href="/">Home</a></li>
 <li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories</a></li> -->
-<li id="level-4">[Treaty/Agreement of 10 and 15 August 1904]</li>
+<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties</a></li> -->
+<li id="level-4">“Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren”</li>
 </ul>
 </nav>
 <div class="nav-container" data-include="header">
@@ -47,7 +47,7 @@
 <section class="text-object">
 <!-- end seg 1 -->
 
-<h2 id="item-title">[Treaty/Agreement of 10 and 15 August 1904]</h2>
+<h2 id="item-title">“Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama”</h2>
 
 <!-- start seg 2 -->
 <p class="associated-links recovered-text"><a href="#digital-publication-details" class="item-details-link"><i class="fa fa-lg fa-info-circle" aria-hidden="true"></i><span>Digital Publication Details</span></a><a href="#source-article-details" class="item-details-link"><i class="fa fa-lg fa-info-circle" aria-hidden="true"></i><span>Source Article Details</span></a></p>
@@ -947,7 +947,7 @@ M<span class="small">OISAKAMO</span> X
 mark.
 Witnesses :ー 
 (Signed) B. C. F<span class="small">HERE</span>.
-( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
+( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</p>
 </section>
 
 <!-- start seg 3 -->
@@ -959,28 +959,28 @@ Witnesses :ー
 
 <section class="publication" aria-labelledby="digital-publication-details">
   <h3 id="digital-publication-details">Digital Publication Details</h3>
-  <p id="title"><strong>Title:</strong> [Treaty/Agreement of 10 and 15 August 1904]</p>
-  <p id="creator"><strong>Creator(s):</strong> Lenana; Masakondi; Lemani; Leteregi; Lelmurua; Lakombe; Limgiseng; Lisiari; Mepaku; Lambari; Naivasha; Legalishu; Olmugesa; Olainomodo; Olotogia; Olieti; Lanairugu; Lingaldu; Ginomun; Liwala; Lembogi; Sabori; Donald Stewart</p>
-  <!--<p id="translator"><strong>Translator(s):</strong> </p>-->
-  <p id="publication-date"><strong>Publication date:</strong> (1914) 2023</p>
+  <p id="title"><strong>Title:</strong> “Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama”</p>
+  <p id="creator"><strong>Creator(s):</strong> Hercules Robinson; Charles Warren; Ghasitsive; Bathoen; Sechele I; Sebele; Lintse; Karie; Headman No. 1; Headman No. 2; Headman No. 3; Kgari; S.H. Edwards; [?] Boyne; [?] Gray; Frederick W. Walker; Gohakhose; Ini; Kuaati; Meguami; Radieladi; Palentin; Mokawano; Ronwe; Khama; Mokutshuane; Sephekolo; Legkowe; Raburiteng; Mathebi; Tiro; Kgothoocho; Rampodie; Torongane; Kamodisa; Molia; Kuati; Matolsote; Moloingane; Sabesho; Tau Kobŭng; Mocholopheko; Suphobi; Dilorwe; Motshequwe; Rani; Mokgethi; Ramogabeleo; Mokowani; Phittwe; Noanvoadickmewe; Mopi; Mothelwa; Egaŭ; Mothoesi; Thongane; Mookodi; Lethaku; Nkobele; Moroa; Gubusatu; Mothibo; Mogkwathi; Mualifhe; Edwin Llyod; George Baden-Powell; Frank Whitely; Motsiokhumo; Mhiko; Legotsama; Kumunao; Bome; Telekeleo; Maseu; Molietsa; Moisakamo</p>
+  <p id="translator"><strong>Translator(s):</strong> Khama; John Mackenzie</p>
+  <p id="publication-date"><strong>Publication date:</strong> (1885) 2023</p>
   <p id="publisher"><strong>Digital publishers:</strong> <a href="/"><em>One More Voice</em></a>, <a aria-label="External Link" href="https://ardhi.unl.edu">The Ardhi Initiative</a></p>
-  <p id="encoding"><strong>Critical encoding:</strong> Ng’ang’a Wahu-Mũchiri, Adrian S. Wisnicki</p>
-  <p id="identifier"><strong><em>One More Voice</em> identifier:</strong> liv_022001</p>
-  <p id="citation"><strong>Cite (Chicago Author-Date):</strong> Lenana, Masakondi, Lemani, Leteregi, Lelmurua, Lakombe, Limgiseng, Lisiari, Mepaku, Lambari, Naivasha, Legalishu, Olmugesa, Olainomodo, Olotogia, Olieti, Lanairugu, Lingaldu, Ginomun, Liwala, Lembogi, Sabori, and Donald Stewart. (1914) 2023. “[Treaty/Agreement of 10 and 15 August 1904].” Edited by Ng’ang’a Wahu-Mũchiri and Adrian S. Wisnicki. In <em>One More Voice</em>, solidarity edition; Ardhi Initiative. <a href="/html/recovering-histories/kenya/liv_022001_HTML.html">https://onemorevoice.org/html/recovering-histories/kenya/liv_022001_HTML.html</a>.</p>
+  <p id="encoding"><strong>Critical encoding:</strong> Darian Wilson, Adrian S. Wisnicki</p>
+  <p id="identifier"><strong><em>One More Voice</em> identifier:</strong> liv_022004</p>
+  <p id="citation"><strong>Cite (Chicago Author-Date):</strong> Hercules Robinson, Charles Warren, Ghasitsive, Bathoen, Sechele I, Sebele, Lintse, Karie, Headman No. 1, Headman No. 2, Headman No. 3, Kgari, S.H. Edwards, [?] Boyne, [?] Gray, Frederick W. Walker, Gohakhose, Ini, Kuaati, Meguami, Radieladi, Palentin, Mokawano, Ronwe, Khama, Mokutshuane, Sephekolo, Legkowe, Raburiteng, Mathebi, Tiro, Kgothoocho, Rampodie, Torongane, Kamodisa, Molia, Kuati, Matolsote, Moloingane, Sabesho, Tau Kobŭng, Mocholopheko, Suphobi, Dilorwe, Motshequwe, Rani, Mokgethi, Ramogabeleo, Mokowani, Phittwe, Noanvoadickmewe, Mopi, Mothelwa, Egaŭ, Mothoesi, Thongane, Mookodi, Lethaku, Nkobele, Moroa, Gubusatu, Mothibo, Mogkwathi, Mualifhe, Edwin Llyod, George Baden-Powell, Frank Whitely, Motsiokhumo, Mhiko, Legotsama, Kumunao, Bome, Telekeleo, Maseu, Molietsa, and Moisakamo. (1885) 2023. “‘Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama’.” Translated by Khama and John Mackenzie. Edited by Darian Wilson and Adrian S. Wisnicki. In <em>One More Voice</em>, solidarity edition; Ardhi Initiative. <a href="/html/recovering-histories/kenya/liv_022004_HTML.html">https://onemorevoice.org/html/recovering-histories/kenya/liv_022004_HTML.html</a>.</p>
   <p id="rights"><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
   <!-- <p><strong>Unique page-visit stamp:</strong> <span id="page-visit">[Not shown because Javascript disabled]</span></p> -->
   <p><strong>Accessibility:</strong> <em>One More Voice</em> digital facsimiles approximate the textual, structural, and material features of original documents. However, because such features may reduce accessibility, each facsimile allows users to toggle such features on and off as needed.</p>
 </section>
 <section class="metadata" aria-labelledby="source-article-details">
-  <h3 id="source-article-details">Source Article Details</h3>
-  <p id="article-title"><strong>Article Title:</strong> “Judgment of the High Court of the East Africa Protectorate in the Case Brought by the Masai Tribe Against the Attorney-General of the Protectorate and Others”</p>
-  <p id="article-creator"><strong>Article Creator:</strong> Anonymous</p>
-  <p id="periodical"><strong>Periodical:</strong> <em>The American Journal of International Law</em></p>
-  <p id="date"><strong>Date:</strong> April 1914</p>
-  <p id="volume"><strong>Volume(s):</strong> 8</p>
-  <p id="issue"><strong>Issue(s):</strong> 2</p>
-  <p id="page"><strong>Page(s):</strong> 380-89 [382-83]</p>
-  <p id="repository"><strong>Repository:</strong>  <a aria-label="External Link" href="https://www.jstor.org/stable/2187148">JSTOR</a></p>
+  <h3 id="source-article-details">Source Volume Details</h3>
+  <p id="article-title"><strong>Volume Title:</strong> <em>Further Correspondence Respecting the Affairs of the Transvaal and Adjacent Territories</em></p>
+  <!-- <p id="article-creator"><strong>Volume Creator:</strong> </p> -->
+  <p id="series"><strong>Series:</strong> <em>House of Commons. Parliamentary Papers</em></p>
+  <p id="date"><strong>Date:</strong> 1885</p>
+  <p id="volume"><strong>Volume(s):</strong> C.–4588</p>
+  <!-- <p id="issue"><strong>Issue(s):</strong> </p> -->
+  <p id="page"><strong>Page(s):</strong> 36-48</p>
+  <p id="repository"><strong>Repository:</strong>  <a aria-label="External Link" href="https://parlipapers.proquest.com/parlipapers">Proquest</a></p><!-- fix -->
 </section>
 
 <!-- start seg 4 -->
